--- a/Lua/Lua.vcxproj.filters
+++ b/Lua/Lua.vcxproj.filters
@@ -33,15 +33,15 @@
     <ClCompile Include="Exceptions\LuaSyntaxException.cpp">
       <Filter>Exceptions</Filter>
     </ClCompile>
+    <ClCompile Include="Core\GlobalState.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\LuaInstance.h">
       <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="Core\LuaCore.h">
-      <Filter>Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Core\LuaState.h">
       <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="Core\LuaCoreMinimal.h">
@@ -64,6 +64,12 @@
     </ClInclude>
     <ClInclude Include="Exceptions\LuaSyntaxException.h">
       <Filter>Exceptions</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\GlobalState.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\LuaState.h">
+      <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
