--- a/INIReader/INIReader.vcxproj
+++ b/INIReader/INIReader.vcxproj
@@ -19,36 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Debugging\Logger.cpp" />
-    <ClCompile Include="Exceptions\Exception.cpp" />
-    <ClCompile Include="Exceptions\ArgumentException.cpp" />
-    <ClCompile Include="Exceptions\IOException.cpp" />
-    <ClCompile Include="IO\Directory.cpp" />
-    <ClCompile Include="IO\Path.cpp" />
-    <ClCompile Include="Modding\ModLoader.cpp" />
+    <ClInclude Include="INIReader.h" />
+    <ClInclude Include="INISyntaxException.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Debugging\Logger.h" />
-    <ClInclude Include="Debugging\Verbosity.h" />
-    <ClInclude Include="Exceptions\Exception.h" />
-    <ClInclude Include="Exceptions\ArgumentException.h" />
-    <ClInclude Include="Exceptions\IOException.h" />
-    <ClInclude Include="IO\Directory.h" />
-    <ClInclude Include="IO\Json.h" />
-    <ClInclude Include="IO\Path.h" />
-    <ClInclude Include="Modding\ModLoader.h" />
-    <ClInclude Include="StringUtility.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <ClCompile Include="INIReader.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{536acec0-5768-47e1-bbff-b0a37657da6f}</ProjectGuid>
-    <RootNamespace>Core</RootNamespace>
+    <ProjectGuid>{95ac8b34-9624-4fdb-a684-29e777984058}</ProjectGuid>
+    <RootNamespace>INIReader</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>ArtemisCore</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -97,19 +79,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)Core;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Daniel\Artemis;$(IncludePath)</IncludePath>
+    <LibraryPath>$(OutputPath);D:\Daniel\Artemis\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Core;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Daniel\Artemis;$(IncludePath)</IncludePath>
+    <LibraryPath>$(OutputPath);D:\Daniel\Artemis\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)Core;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Daniel\Artemis;$(IncludePath)</IncludePath>
+    <LibraryPath>$(OutputPath);D:\Daniel\Artemis\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Core;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Daniel\Artemis;$(IncludePath)</IncludePath>
+    <LibraryPath>$(OutputPath);D:\Daniel\Artemis\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -128,7 +114,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>Dbghelp.lib</AdditionalDependencies>
+      <AdditionalDependencies>ArtemisCore.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -152,7 +138,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>Dbghelp.lib</AdditionalDependencies>
+      <AdditionalDependencies>ArtemisCore.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -172,7 +158,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>Dbghelp.lib</AdditionalDependencies>
+      <AdditionalDependencies>ArtemisCore.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -196,17 +182,10 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>Dbghelp.lib</AdditionalDependencies>
+      <AdditionalDependencies>ArtemisCore.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets" Condition="Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" />
   </ImportGroup>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets'))" />
-  </Target>
 </Project>
